Bug 321690 - power devil crash with no reason in 4.10.80
Summary: power devil crash with no reason in 4.10.80
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: 4.10.80
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
: 321371 321713 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-28 03:00 UTC by TOM Harrison
Modified: 2013-07-29 18:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TOM Harrison 2013-06-28 03:00:46 UTC
Application: kded4 (4.10.80)
KDE Platform Version: 4.10.80
Qt Version: 4.8.4
Operating System: Linux 3.8.13 x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
the power devil will crash will no reason.
and it happened for above twice.
i have stop the power manager for not show that crash again

The crash can be reproduced every time.

-- Backtrace:
Application: KDE 常駐程式 (kded4), signal: Floating point exception
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f863d1be7c0 (LWP 15721))]

Thread 5 (Thread 0x7f861b5ab700 (LWP 15730)):
#0  0x00007f863aa3e3cd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f8637b861dc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8637b86304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f863be70036 in QEventDispatcherGlib::processEvents (this=0x7f86140008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f863be4038f in QEventLoop::processEvents (this=this@entry=0x7f861b5aad90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f863be40618 in QEventLoop::exec (this=this@entry=0x7f861b5aad90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f863bd42410 in QThread::exec (this=this@entry=0xffb760) at thread/qthread.cpp:542
#7  0x00007f863be21edf in QInotifyFileSystemWatcherEngine::run (this=0xffb760) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007f863bd44bec in QThreadPrivate::start (arg=0xffb760) at thread/qthread_unix.cpp:338
#9  0x00007f863825af8e in start_thread (arg=0x7f861b5ab700) at pthread_create.c:311
#10 0x00007f863aa4ae1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 4 (Thread 0x7f8608eae700 (LWP 15745)):
#0  __GI___pthread_getspecific (key=5) at pthread_getspecific.c:32
#1  0x00007f8637baa390 in g_thread_self () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8637b862f5 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f863be70036 in QEventDispatcherGlib::processEvents (this=0x7f85ec0008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f863be4038f in QEventLoop::processEvents (this=this@entry=0x7f8608eadd80, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f863be40618 in QEventLoop::exec (this=this@entry=0x7f8608eadd80, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f863bd42410 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#7  0x00007f86205b7215 in KCupsConnection::run() () from /usr/lib/libkcupslib.so
#8  0x00007f863bd44bec in QThreadPrivate::start (arg=0xe28c40) at thread/qthread_unix.cpp:338
#9  0x00007f863825af8e in start_thread (arg=0x7f8608eae700) at pthread_create.c:311
#10 0x00007f863aa4ae1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f85e7fff700 (LWP 15746)):
#0  0x00007f8637bc5608 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f8637b86188 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8637b86304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f863be70036 in QEventDispatcherGlib::processEvents (this=0x7f85e00008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f863be4038f in QEventLoop::processEvents (this=this@entry=0x7f85e7ffedc0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f863be40618 in QEventLoop::exec (this=this@entry=0x7f85e7ffedc0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f863bd42410 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#7  0x00007f863bd44bec in QThreadPrivate::start (arg=0xbf0520) at thread/qthread_unix.cpp:338
#8  0x00007f863825af8e in start_thread (arg=0x7f85e7fff700) at pthread_create.c:311
#9  0x00007f863aa4ae1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f85e6c4b700 (LWP 15752)):
#0  0x00007f863aa3cb0d in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f862a0bfe41 in ?? () from /usr/lib/nvidia-319/tls/libnvidia-tls.so.319.32
#2  0x00007f8637bc46cf in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8637b85d3c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8637b86175 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f8637b866ba in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f85e6f3b4f6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#7  0x00007f8637ba9eb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f863825af8e in start_thread (arg=0x7f85e6c4b700) at pthread_create.c:311
#9  0x00007f863aa4ae1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f863d1be7c0 (LWP 15721)):
[KCrash Handler]
#6  0x00007f861c742c8e in PowerDevilUPowerBackend::onDeviceChanged (this=0x1160ea0, device=...) at ../../../powerdevil/daemon/backends/upower/powerdevilupowerbackend.cpp:263
#7  0x00007f863be560ef in QMetaObject::activate (sender=0x11a2070, m=m@entry=0x7f861c9617e0 <UdevQt::Client::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff39b1ffb0) at kernel/qobject.cpp:3539
#8  0x00007f861c74a705 in UdevQt::Client::deviceChanged (this=<optimized out>, _t1=...) at ./udevqt.moc:160
#9  0x00007f861c74a866 in UdevQt::ClientPrivate::_uq_monitorReadyRead (this=0x10df9a0, fd=<optimized out>) at ../../../powerdevil/daemon/backends/upower/udevqtclient.cpp:109
#10 0x00007f863be560ef in QMetaObject::activate (sender=sender@entry=0x1108470, m=m@entry=0x7f863c19c980 <QSocketNotifier::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff39b20140) at kernel/qobject.cpp:3539
#11 0x00007f863bea1d2e in QSocketNotifier::activated (this=this@entry=0x1108470, _t1=29) at .moc/release-shared/moc_qsocketnotifier.cpp:103
#12 0x00007f863be5eb0b in QSocketNotifier::event (this=0x1108470, e=0x7fff39b20760) at kernel/qsocketnotifier.cpp:317
#13 0x00007f863b1e78ec in QApplicationPrivate::notify_helper (this=this@entry=0xbf10f0, receiver=receiver@entry=0x1108470, e=e@entry=0x7fff39b20760) at kernel/qapplication.cpp:4567
#14 0x00007f863b1ea25b in QApplication::notify (this=this@entry=0x7fff39b21f70, receiver=receiver@entry=0x1108470, e=e@entry=0x7fff39b20760) at kernel/qapplication.cpp:4428
#15 0x00007f863cbc3166 in KApplication::notify (this=0x7fff39b21f70, receiver=0x1108470, event=0x7fff39b20760) at ../../kdeui/kernel/kapplication.cpp:311
#16 0x00007f863be4163e in QCoreApplication::notifyInternal (this=0x7fff39b21f70, receiver=0x1108470, event=event@entry=0x7fff39b20760) at kernel/qcoreapplication.cpp:946
#17 0x00007f863be705c8 in sendEvent (event=0x7fff39b20760, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#18 socketNotifierSourceDispatch (source=0xbf0790) at kernel/qeventdispatcher_glib.cpp:110
#19 0x00007f8637b85f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007f8637b86248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f8637b86304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007f863be70036 in QEventDispatcherGlib::processEvents (this=0xa79680, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#23 0x00007f863b28d13e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#24 0x00007f863be4038f in QEventLoop::processEvents (this=this@entry=0x7fff39b20b20, flags=...) at kernel/qeventloop.cpp:149
#25 0x00007f863be40618 in QEventLoop::exec (this=this@entry=0x7fff39b20b20, flags=...) at kernel/qeventloop.cpp:204
#26 0x00007f85e6245dce in KAuth::DBusHelperProxy::executeAction (this=0x11a3fd0, action=..., helperID=..., arguments=...) at ../../kdecore/auth/backends/dbus/DBusHelperProxy.cpp:118
#27 0x00007f863c2f0507 in KAuth::Action::execute (this=this@entry=0x7fff39b20ca0, helperID=...) at ../../kdecore/auth/kauthaction.cpp:365
#28 0x00007f863c2f05b1 in KAuth::Action::execute (this=this@entry=0x7fff39b20ca0) at ../../kdecore/auth/kauthaction.cpp:301
#29 0x00007f861c7433cf in PowerDevilUPowerBackend::setBrightness (this=this@entry=0x1160ea0, brightnessValue=<optimized out>, type=type@entry=PowerDevil::BackendInterface::Screen) at ../../../powerdevil/daemon/backends/upower/powerdevilupowerbackend.cpp:355
#30 0x00007f861c520768 in PowerDevil::BundledActions::DimDisplay::triggerImpl (this=<optimized out>, args=...) at ../../../powerdevil/daemon/actions/bundled/dimdisplay.cpp:79
#31 0x00007f861c50173a in PowerDevil::Action::trigger (this=this@entry=0x121a870, args=...) at ../../../powerdevil/daemon/powerdevilaction.cpp:100
#32 0x00007f861c520af6 in PowerDevil::BundledActions::DimDisplay::setBrightnessHelper (this=0x121a870, brightness=0) at ../../../powerdevil/daemon/actions/bundled/dimdisplay.cpp:74
#33 0x00007f861c50521a in PowerDevil::Core::onKIdleTimeoutReached (this=0x115d470, identifier=2, msec=<optimized out>) at ../../../powerdevil/daemon/powerdevilcore.cpp:636
#34 0x00007f861c50a9a9 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./powerdevilcore.moc:126
#35 PowerDevil::Core::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./powerdevilcore.moc:93
#36 0x00007f863be560ef in QMetaObject::activate (sender=sender@entry=0x11bd560, m=m@entry=0x7f861c4ef120 <KIdleTime::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff39b21140) at kernel/qobject.cpp:3539
#37 0x00007f861c2e79ef in KIdleTime::timeoutReached (this=this@entry=0x11bd560, _t1=_t1@entry=2, _t2=_t2@entry=540000) at ./kidletime.moc:138
#38 0x00007f861c2e7e5b in KIdleTimePrivate::_k_timeoutReached (this=<optimized out>, msec=540000) at ../../kutils/kidletime/kidletime.cpp:243
#39 0x00007f863be560ef in QMetaObject::activate (sender=sender@entry=0x11f8cb0, m=m@entry=0x7f861c4ef3e0 <AbstractSystemPoller::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff39b21320) at kernel/qobject.cpp:3539
#40 0x00007f861c2e8971 in AbstractSystemPoller::timeoutReached (this=this@entry=0x11f8cb0, _t1=540000) at ./abstractsystempoller.moc:129
#41 0x00007f861c2eae53 in x11Event (event=0x7fff39b21920, this=0x11f8cb0) at ../../kutils/kidletime/xsyncbasedpoller.cpp:235
#42 XSyncBasedPoller::x11Event (this=0x11f8cb0, event=0x7fff39b21920) at ../../kutils/kidletime/xsyncbasedpoller.cpp:218
#43 0x00007f863cbc002e in publicx11Event (e=<optimized out>, this=<optimized out>) at ../../kdeui/kernel/kapplication.cpp:918
#44 KApplication::x11EventFilter (this=0x7fff39b1fdd0, _event=0x7fff39b21920) at ../../kdeui/kernel/kapplication.cpp:930
#45 0x00007f863b25305c in qt_x11EventFilter (ev=0x7fff39b21920) at kernel/qapplication_x11.cpp:441
#46 qt_x11EventFilter (ev=0x7fff39b21920) at kernel/qapplication_x11.cpp:429
#47 0x00007f863b261100 in QApplication::x11ProcessEvent (this=0x7fff39b21f70, event=event@entry=0x7fff39b21920) at kernel/qapplication_x11.cpp:3458
#48 0x00007f863b28d042 in x11EventSourceDispatch (s=0xbf2720, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#49 0x00007f8637b85f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#50 0x00007f8637b86248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#51 0x00007f8637b86304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#52 0x00007f863be70016 in QEventDispatcherGlib::processEvents (this=0xa79680, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#53 0x00007f863b28d13e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#54 0x00007f863be4038f in QEventLoop::processEvents (this=this@entry=0x7fff39b21cf0, flags=...) at kernel/qeventloop.cpp:149
#55 0x00007f863be40618 in QEventLoop::exec (this=this@entry=0x7fff39b21cf0, flags=...) at kernel/qeventloop.cpp:204
#56 0x00007f863be45cf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#57 0x00007f863b1e5ffc in QApplication::exec () at kernel/qapplication.cpp:3828
#58 0x00007f8625f15050 in kdemain (argc=1, argv=0xca38c0) at ../../kded/kded.cpp:925
#59 0x00000000004084ea in launch (argc=argc@entry=1, _name=_name@entry=0x40b166 "kded4", args=args@entry=0x0, cwd=cwd@entry=0x0, envc=envc@entry=0, envs=<optimized out>, envs@entry=0x0, reset_env=reset_env@entry=false, tty=tty@entry=0x0, avoid_loops=avoid_loops@entry=false, startup_id_str=startup_id_str@entry=0x40b04e "0") at ../../kinit/kinit.cpp:738
#60 0x0000000000405b69 in main (argc=4, argv=<optimized out>, envp=0x7fff39b22970) at ../../kinit/kinit.cpp:1853

Reported using DrKonqi
Comment 1 Jekyll Wu 2013-06-28 16:12:21 UTC
*** Bug 321713 has been marked as a duplicate of this bug. ***
Comment 2 Ryan Murray 2013-07-03 16:44:45 UTC
This seems to be caused (for me) by my asus motherboard having the eeepc-wmi driver and exporting a backlight brightness and max_brightness of 0:
rmurray@ninsei:/sys/class/backlight/eeepc-wmi$ cat brightness 
0
rmurray@ninsei:/sys/class/backlight/eeepc-wmi$ cat max_brightness 
0
The code in powerdevil/daemon/backends/upower/powerdevilupowerbackend.cpp: PowerDevilUPowerBackend::onDeviceChanged attempts to divide by max_brightness without checking if the values are 0 first.
Comment 3 Christoph Feck 2013-07-04 21:39:29 UTC
Git commit cd78fa99e30f7586e75069b5ca569d499a16f0d1 by Christoph Feck.
Committed on 04/07/2013 at 21:36.
Pushed by cfeck into branch 'master'.

Fix crash on backlight interfaces with max_brightness == 0
REVIEW: 111389

M  +3    -0    powerdevil/daemon/backends/upower/powerdevilupowerbackend.cpp

http://commits.kde.org/kde-workspace/cd78fa99e30f7586e75069b5ca569d499a16f0d1
Comment 4 Alex Fiestas 2013-07-29 18:27:08 UTC
*** Bug 321371 has been marked as a duplicate of this bug. ***