Fix crash on backlight interfaces with max_brightness == 0

BUG: 321690
REVIEW: 111389